<resources>
    <string name="app_name">DeX Crypto</string>
    <string name="home">Home</string>
    <string name="stats">Market</string>
    <string name="watchlist">Saved</string>
    <string name="search_hint">Search</string>
    <string name="not_found">Not Found</string>
    <string name="empty_watchlist">Nothing to show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1m">1 Month</string>
    <string name="_1w">1 Week</string>
    <string name="_1d">1 Day</string>
    <string name="_4h">4 Hour</string>
    <string name="_1h">1 Hour</string>
    <string name="_15m">15 Min</string>
</resources>